# data-platform-tools

./: .gitignore  README.md
.github/workflows/: data-backfill_unnester-spark-job.yaml  table-refresh.yaml  unnester-spark-job.yaml  utils.yaml
.github/workflows/data-backfill/: table-refresh.yaml
data-backfill/table-refresh/: Makefile  Readme.md  pyproject.toml
data-backfill/table-refresh/table_refresh/: table_refresh.py
data-backfill/table-refresh/tests/: conftest.py  test_table_refresh.py
data-backfill/unnester-spark-job/: README.md  makefile  pyproject.toml
data-backfill/unnester-spark-job/src/: unnester_spark_job.py
data-backfill/unnester-spark-job/tests/: conftest.py  test_unnester_spark_job.py
data-backfill/unnester-spark-job/unnester_spark_job/: unnester_spark_job.py
utils/: Makefile  README.md  pyproject.toml
utils/tests/: test_utils.py
utils/utils/: utils.py
