[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["TravelNest Engineering <engineering@travelnest.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
