[tool.poetry]
name = "table-refresh"
version = "0.1.0"
description = "Add partitions to selected table"
authors = ["TravelNest Engineering <engineering@travelnest.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"
boto3 = "^1.26.16"
utils = {path = "../../utils"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
