[tool.poetry]
name = "unnester-spark-job"
version = "0.1.0"
description = "Backfill for unnester and table-refresh"
authors = ["TravelNest Engineering <engineering@travelnest.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
boto3 = "^1.26.16"
utils = {path = "../../utils"}
table_refresh = {path = "../table-refresh"}

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.10.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
